Fix CORS Options and OriginPatterns to resolve 403 Forbidden